--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,26 @@
   <!-- icon link  -->
 </head>
 <body>
-  
+  <section class = 'month-navigation'>
+  <button class="month-navigation__previous button" type="button">⋘</button>
+  <h2 class = "month-navigation__current-month"></h2>
+  <button class="month-navigation__next button" type="button">⋙</button>
+</section>
+  <table>
+    <thead>
+      <tr>
+        <th scope="col">Mon.</th>
+        <th scope="col">Tues.</th>
+        <th scope="col">Wed.</th>
+        <th scope="col">Thur.</th>
+        <th scope="col">Fri.</th>
+        <th scope="col">Sat.</th>
+        <th scope="col">Sun.</th>
+      </tr>
+    </thead>
+    <tbody class = 'calendar-table'>
+    </tbody>
+  </table>
 </body>
 
 </html>
