hidden all elements

--- a/src/template.html
+++ b/src/template.html
@@ -28,6 +28,11 @@
     <tbody class = 'calendar-table'>
     </tbody>
   </table>
+  <button class="date_type_selector days_off" type="button">✗</button>
+  <button class="date_type_selector working_days" type="button">✓</button>
+  <button class="date_type_selector weekends" type="button">☐</button>
+
+
 </body>
 
 </html>
