--- a/src/template.html
+++ b/src/template.html
@@ -10,10 +10,10 @@
 <body>
   <section class = 'month-navigation'>
   <button class="month-navigation__previous button" type="button">⋘</button>
-  <h2 class = "month-navigation__current-month"></h2>
+  <h2 class = "month-navigation__current-month text-center"></h2>
   <button class="month-navigation__next button" type="button">⋙</button>
 </section>
-  <table>
+  <table class="text-center w-50">
     <thead>
       <tr>
         <th scope="col">Mon.</th>
