--- a/src/template.html
+++ b/src/template.html
@@ -2,37 +2,41 @@
 <html lang="en">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700&family=Silkscreen&display=swap" rel="stylesheet">
   <title>
     Working days calendar
   </title>
   <!-- icon link  -->
 </head>
 <body>
-  <section class = 'month-navigation'>
-  <button class="month-navigation__previous button" type="button">⋘</button>
+  <div class = 'calendar-container w-75 container bg-dark rounded-3 m-5 text-light'>
+  <nav class = 'month-navigation d-inline-flex w-100 justify-content-center m-3 align-items-center'>
+  <button class="month-navigation__previous button mx-5" type="button">⋘</button>
   <h2 class = "month-navigation__current-month text-center"></h2>
-  <button class="month-navigation__next button" type="button">⋙</button>
-</section>
-  <table class="text-center w-50">
-    <thead>
-      <tr>
-        <th scope="col">Mon.</th>
-        <th scope="col">Tues.</th>
-        <th scope="col">Wed.</th>
-        <th scope="col">Thur.</th>
-        <th scope="col">Fri.</th>
-        <th scope="col">Sat.</th>
-        <th scope="col">Sun.</th>
-      </tr>
-    </thead>
-    <tbody class = 'calendar-table'>
-    </tbody>
-  </table>
-  <button class="date_type_selector days_off" type="button">✗</button>
-  <button class="date_type_selector working_days" type="button">✓</button>
-  <button class="date_type_selector weekends" type="button">☐</button>
-
-
+  <button class="month-navigation__next button mx-5" type="button">⋙</button>
+  </nav>
+  <section class="container text-center d-flex align-items-center flex-column justify-content-center">
+    <nav class = 'my-1 row w-100 d-inline-flex justify-content-around'>
+        <h3 class="col">mon.</h3>
+        <h3 class="col" >tues.</h3>
+        <h3 class="col" >wed.</h3>
+        <h3 class="col" >thur.</h3>
+        <h3 class="col" >fri.</h3>
+        <h3 class="col" >sat.</h3>
+        <h3 class="col" >sun.</h3>
+    </nav>
+    <div class = 'my-1 row w-100 calendar-table d-flex align-items-center flex-column justify-content-center'>
+    </div>
+  </section>
+  <nav class = 'd-inline-flex w-100 justify-content-center m-3'>
+  <button class="date_type_selector m-1 rounded-1 date-type_button days-off days-off__button" date-type = 'daysOff' type="button"> days off </button>
+  <button class="date_type_selector m-1 rounded-1 date-type_button working-days working-days__button" date-type = 'workingDays' type="button"> working days </button>
+  <button class="date_type_selector m-1 rounded-1 date-type_button weekends weekends__button" date-type = 'weekends' type="button"> weekends </button>
+</nav>
+</div>
 </body>
+
 
 </html>
